transakcje cykliczne
